# start

./: INTEGRATION_TEST.md  WORK_ORDER.md  test-document.canvas
.claude/: settings.local.json
ai-service/: FRONTEND_INTEGRATION_PLAN.md  README.md  background_processors.py  citation_system.py  deterministic_analysis.py  enhanced_inference.py  integrated_pdf_flow.py  main.py  models.py  search_api.py  search_datastore.py  semantic_inference.py  services.py  test_complete_workflow.py  test_frontend_integration.py  test_hybrid_analysis.py  test_pdf_summary.py  test_status_flow.py
ai-service/core/: __init__.py  workflow_manager.py
ai-service/core/pdf_service/: __init__.py  service.py
ai-service/datastore/: __init__.py  document_datastore.py
ai-service/datastore/documents/: document_index.json  (+7 more)
ai-service/flows/: __init__.py
ai-service/frontend_api/: __init__.py  search_api.py  status_publisher.py
ai-service/services/: __init__.py  citation_service.py  llm_service.py  search_service.py
ai-service/tests/: test_pdf_summary.py  test_search_system.py
ai-service/utils/: __init__.py  logging.py  validation.py
cognitive-canvas/: ARCHITECTURE.md  MIGRATION.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cognitive-canvas/public/: state-worker.js
cognitive-canvas/src/: App.css  App.tsx  Editor.tsx  main.tsx
cognitive-canvas/src-tauri/: Cargo.toml  tauri.conf.json
cognitive-canvas/src-tauri/capabilities/: default.json
cognitive-canvas/src-tauri/src/: config_parser.rs  lib.rs  main.rs  settings_manager.rs  shortcuts_manager.rs
(+79 files in other folders)
