[package]
name = "cognitive-canvas"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cognitive_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }

# Performance optimizations
[profile.release]
# Maximum optimization for size and speed
opt-level = 3
# Link-time optimization for better performance
lto = true
# Code generation units for faster compilation
codegen-units = 1
# Panic handling for smaller binary
panic = "abort"
# Strip debug symbols for smaller size
strip = true

